@@ -1,5 +1,10 @@
 2013-01-15  Hendrik Tews  <tews@os.inf.tu-dresden.de>
 
+	* differentiate proof complete message according to
+	  extistential status
+
+2013-01-15  Hendrik Tews  <tews@os.inf.tu-dresden.de>
+
 	* doc fixes
 
 2013-01-14  Hendrik Tews  <tews@os.inf.tu-dresden.de>
